--- a/dirconfig.json
+++ b/dirconfig.json
@@ -1,4 +1,9 @@
 {
   "access" : "private",
+  "evaluation": {
+    "handler": "python",
+    "time_limit": 15,
+    "memory_limit": 100000000
+  },
   "programming_language": "python"
 }
